# she_db

./: .gitmodules  CMakeLists.txt  build.sh
Test/: CMakeLists.txt  Makefile  main.cpp  run.sh  storage_engine_test.cpp  storage_engine_test.h
Test/file/: data
Test/src/: storage_engine_test.cpp
cmake/: compilation_options.cmake  import.cmake  she_db-config.cmake  target_test.cmake  z_install.cmake
docs/: file_format.md
docs/study_note/: design_file.md  design_page.md  note.md
exec/: application.cpp
outdated_codes/Test/src/: main.cpp  storage_engine_test.cpp
outdated_codes/src/: main.cpp  test.h
outdated_codes/src/StorageEngine/: Form.h
outdated_codes/src/sqlParse/: select.h
src/: common_define.h  create_file.cpp  create_file.h  daemon.cpp  daemon.h  data_type_operator.cpp  data_type_operator.h  data_types_rw.cpp  data_types_rw.h  file_manage.cpp  file_manage.h  main.cpp  operator_logger.cpp  operator_logger.h  she_db.h  table.cpp  table.h  table_manage.cpp  table_manage.h  test.h
src/StorageEngine/: CreateFile.cpp  CreateFile.h  Form.cpp
src/sys_api_encapsulation/: file.cpp  file.h  read.cpp  read.h  seek.cpp  seek.h  write.cpp  write.h
store/: README.md
study_note/: base.md  database_storage.md  design_datastruct.md  note.md
test/: main.cpp  t1_file_test.cpp  t1_file_test.h  t2_table.cpp  t2_table.h  test_suite.h
test/test_case/: create_file.cpp  create_file.h  data_type_operator.cpp  data_type_operator.h  file_manage.cpp  file_manage.h
test/test_case/sys_api_encapsulation/: file.cpp  file.h  read.cpp  read.h  seek.cpp  seek.h  write.cpp  write.h
